    received number from the ISDN link if that number has the corresponding
    Type-Of-Number.
  * Added new dialplan application misdn_command which permits controlling
    the CCBS/CCNR functionality.
  * Added new dialplan function mISDN_CC which permits retrieval of various
    values from an active call completion record.

thirdparty mISDN enhancements
-----------------------------
mISDN has been modified by Digium, Inc. to greatly expand facility message
support to allow:
  * Enhanced COLP support for call diversion and transfer.
  * CCBS/CCNR support.

The latest modified mISDN v1.1.x based version is available at:
http://svn.digium.com/svn/thirdparty/mISDN/trunk
http://svn.digium.com/svn/thirdparty/mISDNuser/trunk

Taged versions of the modified mISDN code are available under:
http://svn.digium.com/svn/thirdparty/mISDN/tags
http://svn.digium.com/svn/thirdparty/mISDNuser/tags

SIP channel driver (chan_sip) changes
-------------------------------------------
  * The sendrpid parameter has been expanded to include the options
    'rpid' and 'pai'. Setting sendrpid to 'rpid' will cause Remote-Party-ID
    header to be sent (equivalent to setting sendrpid=yes) and setting
    sendrpid to 'pai' will cause P-Asserted-Identity header to be sent.

Asterisk Manager Interface
--------------------------
 * The Hangup action now accepts a Cause header which may be used to
   set the channel's hangup cause.
 * sslprivatekey option added to manager.conf and http.conf.  Adds the ability
   to specify a separate .pem file to hold a private key.  By default sslcert
   is used to hold both the public and private key.
------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.